--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,11 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 
+jibi.app.jwtSecret=backoffice.net
+jibi.app.jwtExpirationMs=86400000
+
+spring.main.allow-circular-references= true
+
+
 
 
